# Production-AI-Observability

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alerts/: ai-observability-rules.yml  prometheus.yml
dashboards/: ai-observability-dashboard.json
examples/: real_mode_client.py
incident_workflows/: triage-playbook.md
src/ai_observability/: __init__.py
src/ai_observability/api/: main.py
src/ai_observability/core/: __init__.py  config.py  metrics.py  models.py  redaction.py  sampling.py
src/ai_observability/ingestion/: __init__.py  service.py
src/ai_observability/instrumentation/: __init__.py  opentelemetry.py  tracer.py
src/ai_observability/reporting/: __init__.py  render.py  triage.py
src/ai_observability/sample_app/: __init__.py  demo.py  workflows.py
src/ai_observability/storage/: sqlite_store.py
src/production_ai_observability.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_ingestion.py  test_redaction.py
