[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "production-ai-observability"
version = "0.1.0"
description = "Production-grade AI observability and trace-driven debugging framework."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "PolyForm Noncommercial 1.0.0" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "orjson>=3.10.0,<4.0.0",
  "httpx>=0.28.0,<1.0.0",
  "jinja2>=3.1.6,<4.0.0",
  "python-dateutil>=2.9.0,<3.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "opentelemetry-api>=1.32.0,<2.0.0",
  "opentelemetry-sdk>=1.32.0,<2.0.0",
  "opentelemetry-exporter-otlp-proto-http>=1.32.0,<2.0.0",
  "opentelemetry-instrumentation-fastapi>=0.53b0,<1.0.0",
  "opentelemetry-instrumentation-httpx>=0.53b0,<1.0.0",
  "prometheus-client>=0.21.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "ruff>=0.11.0,<1.0.0",
]

[project.scripts]
ai-observability-api = "ai_observability.api.main:run"
ai-observability-demo = "ai_observability.sample_app.demo:main"

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "UP045"]
